cambios estilo y nuevas paginas

--- a/src/app/modules/pages/error/page-not-found/page-not-found.component.html
+++ b/src/app/modules/pages/error/page-not-found/page-not-found.component.html
@@ -1,1 +1,6 @@
-<p>page-not-found works!</p>
+<div class="error-container">
+    <p class="text-center mt-5">
+        <img src="../../../../../assets/img/monkey-happy.gif">
+    </p>
+    <h1 class="text-center">404 Ups parece que esta página no existe</h1>
+</div>  
