--- a/src/app/modules/pages/landing/landing-page/landing-page.component.html
+++ b/src/app/modules/pages/landing/landing-page/landing-page.component.html
@@ -1,7 +1,7 @@
 <ia-title-landing>
     <ia-topics></ia-topics>
 </ia-title-landing>
-<footer>
-    Se more...
+<footer class="ia-footer-see-more mt-5">
+    <p (click)="scrollToMain()"  >See more...</p>
 </footer>
 
