--- a/src/app/modules/pages/main/components/article-prew-card/article-prew-card.component.html
+++ b/src/app/modules/pages/main/components/article-prew-card/article-prew-card.component.html
@@ -4,6 +4,6 @@
         quas!
     </p>
     <ng-template pTemplate="footer">
-        <p-button label="Leer" icon="pi pi-check"></p-button>
+        <p-button label="Ver mas" icon="pi pi-check" (onClick)="goToArticle()"></p-button>
     </ng-template>
 </p-card>
