--- a/src/app/modules/shared/components/base-chip/base-chip.component.html
+++ b/src/app/modules/shared/components/base-chip/base-chip.component.html
@@ -1,1 +1,2 @@
-<p-chips [(ngModel)]="text" [max]="text.length" (onChipClick)="goTopic($event)"></p-chips>
+<p-chips [(ngModel)]="text" [max]="text.length" 
+(onChipClick)="goTopic($event)" ></p-chips>
