--- a/src/app/modules/pages/main/main-page/main-page.component.css
+++ b/src/app/modules/pages/main/main-page/main-page.component.css
@@ -1,3 +1,39 @@
 ::ng-deep .ia-filters {
     margin-left: 70%;
 }
+
+/*.animated-item {
+    opacity: 0;
+    transform: translateY(20px);
+    transition: opacity 1s ease, transform 1s ease;
+  }
+  
+@keyframes fadeInUp {
+    from {
+        opacity: 0;
+        transform: translateY(20px);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+  
+.fadeInUp {
+    animation: fadeInUp 1s ease;
+}*/
+
+/* Initial state for the navigation bar */
+.ia-navbar-container {
+    position: fixed;
+    top: -100px; /* Off-screen initially */
+    left: 0;
+    width: 100%;
+    transition: top 0.3s ease;
+  }
+  
+  .ia-navbar-container.active {
+    top: 0;
+    z-index: 999;
+  }
+  
