ciclo 3 - main completado

--- a/src/app/modules/pages/landing/components/topics/topics.component.html
+++ b/src/app/modules/pages/landing/components/topics/topics.component.html
@@ -1,3 +1,2 @@
-<div class="card p-fluid">
-    <ia-base-chip  [text]="topics" class=""></ia-base-chip>
-</div>
+<ia-base-chip  *ngFor="let topic of topics" [text]="topic"></ia-base-chip>
+
