--- a/src/app/modules/shared/components/search-bar/search-bar.component.html
+++ b/src/app/modules/shared/components/search-bar/search-bar.component.html
@@ -1,6 +1,7 @@
-<span class="p-input-icon-left w-100 mt-3">
+<span class="p-input-icon-left w-100">
     <i class="pi pi-search"></i>
-    <input class="w-100" type="text" pInputText [(ngModel)]="value" />
+    <input class="w-100" type="text" pInputText 
+    [(ngModel)]="value" placeholder="Buscar" (input)="onChangeInput()"/>
 </span>
 
 
