--- a/src/app/modules/pages/main/components/card-collection/card-collection.component.html
+++ b/src/app/modules/pages/main/components/card-collection/card-collection.component.html
@@ -1,3 +1,4 @@
-<ia-article-prew-card *ngFor="let article of articles"
+<ia-article-prew-card 
+*ngFor="let article of articles | articleFilter: searchFilter"
 [article]="article"
 ></ia-article-prew-card>
