--- a/src/app/modules/shared/components/base-chip/base-chip.component.html
+++ b/src/app/modules/shared/components/base-chip/base-chip.component.html
@@ -1,2 +1,3 @@
-<p-chips [(ngModel)]="text" [max]="text.length" 
-(onChipClick)="goTopic($event)" ></p-chips>
+<p-chip class="mt-3 mr-3 ml-3 mb-3" (click)="goTopic()">
+        <div class="p-2">{{text}}</div>
+</p-chip>
