--- a/src/app/modules/pages/landing/components/topics/topics.component.html
+++ b/src/app/modules/pages/landing/components/topics/topics.component.html
@@ -1,2 +1,3 @@
-<ia-base-chip  *ngFor="let topic of topics" [text]="topic"></ia-base-chip>
-
+<div class="ia-chips">
+    <ia-base-chip  *ngFor="let topic of topics" [text]="topic"></ia-base-chip>
+</div>
