--- a/src/app/modules/pages/landing/landing-page/landing-page.component.html
+++ b/src/app/modules/pages/landing/landing-page/landing-page.component.html
@@ -2,6 +2,9 @@
     <ia-topics></ia-topics>
 </ia-title-landing>
 <footer class="ia-footer-see-more mt-5">
-    <p (click)="scrollToMain()"  >See more...</p>
+    <div (click)="scrollToMain()" class = "ia-see-more">
+        <p>See more...</p>
+        <i class="pi pi-angle-double-down" style="color: orange"></i>
+    </div>
 </footer>
 
