--- a/src/app/modules/shared/components/tags/tags.component.html
+++ b/src/app/modules/shared/components/tags/tags.component.html
@@ -1,3 +1,3 @@
 <p-tag severity="{{severity}}" value="{{text}}" 
-[style]="{'background': severityCustom, 'margin-bottom': '0.2rem' }">
+[style]="{'background': severityCustom, 'margin-bottom': '0.2rem', 'margin-right': '0.2rem' }">
 </p-tag>
