--- a/src/app/modules/pages/article/components/info/info.component.html
+++ b/src/app/modules/pages/article/components/info/info.component.html
@@ -1,1 +1,3 @@
-<p>info works!</p>
+
+<span class="mr-5">Tags: </span><ia-tags *ngFor="let ut of tags" [text]="ut" [severity]="'success'"
+#IaTag value="ut"></ia-tags>
