--- a/src/app/modules/pages/landing/components/title-landing/title-landing.component.html
+++ b/src/app/modules/pages/landing/components/title-landing/title-landing.component.html
@@ -1,4 +1,4 @@
-<h1 class="text-center mt-5">INTELIGENCIA ARTIFICIAL - PROTAFOLIO</h1>
+<h1 class="text-center mt-5">INTELIGENCIA ARTIFICIAL - PORTAFOLIO</h1>
 <div class="container mt-5">
     <ng-content class="mt-5"></ng-content>
 </div>
