--- a/src/app/modules/shared/components/base-chip/base-chip.component.html
+++ b/src/app/modules/shared/components/base-chip/base-chip.component.html
@@ -1,3 +1,3 @@
-<p-chip class="mt-3 mr-3 ml-3 mb-3" (click)="goTopic()">
+<p-chip (click)="goTopic()" class="ia-chip" [style]='{ "background": "orange;" }'>
         <div class="p-2">{{text}}</div>
 </p-chip>
