--- a/src/app/modules/pages/main/main-page/main-page.component.html
+++ b/src/app/modules/pages/main/main-page/main-page.component.html
@@ -1,24 +1,24 @@
-<div class="w-100 animated-item ia-navbar-container" [class.active]="showNavBar">
+<div  [@fadeInOut]  class="w-100 animated-item ia-navbar-container" [class.active]="showNavBar">
     <ia-navbar (newInputSearchBar)="searchBarTextRecieve($event)"></ia-navbar>
 </div>
 
-<div class="container">
-    <div class="w-100 animated-item mt-3">
+<div  class="container">
+    <div [@fadeInOut] class="w-100 animated-item mt-3">
         <ia-search-bar #searchBar (changeOnInputSearch)="searchBarTextRecieve($event)"></ia-search-bar>
     </div>
 
-    <div class="animated-item">
+    <div [@fadeInOut] class="animated-item">
         <ia-study-case-carrousel></ia-study-case-carrousel>
     </div>
 
-    <p-scrollPanel [style]="{ width: '70%', height: '100%' }" class="animated-item">
+    <p-scrollPanel [@fadeInOut] [style]="{ width: '70%', height: '100%' }" class="animated-item">
         <h2>Articulos</h2> 
         <ia-card-collection [articles]="articles" 
         [searchFilter]="searchBarText"></ia-card-collection>
         <ia-paginator></ia-paginator>
     </p-scrollPanel>
 
-    <div class="ia-filters animated-item">
+    <div [@fadeInOut] class="ia-filters animated-item">
         <h4>Filtros:</h4>
         <ia-articles-filter (topicSelected)="newTopicSelected($event)"></ia-articles-filter>
     </div>
