--- a/src/app/modules/pages/landing/landing-page/landing-page.component.html
+++ b/src/app/modules/pages/landing/landing-page/landing-page.component.html
@@ -1,10 +1,14 @@
-<ia-title-landing>
-    <ia-topics></ia-topics>
-</ia-title-landing>
-<footer class="ia-footer-see-more mt-5">
-    <div (click)="scrollToMain()" class = "ia-see-more">
-        <p>See more...</p>
-        <i class="pi pi-angle-double-down" style="color: orange"></i>
-    </div>
-</footer>
+<div class="ia-landing-page">
+    <ia-title-landing>
+        <ia-topics></ia-topics>
+    </ia-title-landing>
+
+    <footer class="ia-footer-see-more mt-5">
+        <div (click)="scrollToMain()" class = "ia-see-more">
+            <p>Scroll to more...</p>
+            <i class="pi pi-angle-double-down" style="color: orange"></i>
+        </div>
+    </footer>
+</div>
+
 
