--- a/src/app/modules/pages/landing/landing-page/landing-page.component.css
+++ b/src/app/modules/pages/landing/landing-page/landing-page.component.css
@@ -8,3 +8,12 @@
     display: flex;
     justify-content: center;
 }
+
+.ia-footer-see-more {
+    position: fixed; 
+    bottom: 0;
+    width: 100%;
+    background-color: #fff;
+    text-align: center;
+    padding: 10px;
+}
