--- a/src/app/modules/pages/main/components/article-prew-card/article-prew-card.component.css
+++ b/src/app/modules/pages/main/components/article-prew-card/article-prew-card.component.css
@@ -9,8 +9,9 @@
 
 ::ng-deep .p-card .p-card-body {
     padding: 0.5rem;
+    margin-bottom: 1.5rem;
 }
 
-::ng-deep .p-component, .p-componen {
+::ng-deep .p-component, .p-component {
     margin-right: 0.2rem;
 }
