ciclo ut2 parcial 1

--- a/src/app/modules/pages/main/main-page/main-page.component.html
+++ b/src/app/modules/pages/main/main-page/main-page.component.html
@@ -4,6 +4,7 @@
 
 <div  class="container">
     <div [@fadeInOut] class="w-100 animated-item mt-3">
+        <h2>Busca articulos de tu interes: </h2>
         <ia-search-bar #searchBar (changeOnInputSearch)="searchBarTextRecieve($event)"></ia-search-bar>
     </div>
 
