--- a/src/app/modules/pages/landing/landing-page/landing-page.component.html
+++ b/src/app/modules/pages/landing/landing-page/landing-page.component.html
@@ -1,4 +1,7 @@
 <div class="ia-landing-page">
+    <div class="ia-about">
+        <ia-about-toolbar></ia-about-toolbar>
+    </div> 
     <ia-title-landing>
         <ia-topics></ia-topics>
     </ia-title-landing>
