--- a/src/app/modules/pages/main/components/articles-filter/articles-filter.component.html
+++ b/src/app/modules/pages/main/components/articles-filter/articles-filter.component.html
@@ -9,6 +9,8 @@
             #IaTag value="ut"></ia-tags>
         </p-accordionTab>
         <p-accordionTab header="Ordenar por:">
+            <p-checkbox value="des" inputId="dest"></p-checkbox>
+            <label for="ny">Mostrar solo Destacados</label>
         </p-accordionTab>
     </p-accordion>
 </form>
