--- a/src/app/modules/shared/components/navbar/navbar.component.css
+++ b/src/app/modules/shared/components/navbar/navbar.component.css
@@ -12,3 +12,8 @@
 .search-bar-container.active {
     width: 25rem;
 }
+
+
+::ng-deep p-toolbar .p-component, .p-component {
+    margin-right: 0rem;
+}
