--- a/src/app/modules/shared/components/paginator/paginator.component.html
+++ b/src/app/modules/shared/components/paginator/paginator.component.html
@@ -1,1 +1,2 @@
-<p-paginator (onPageChange)="onPageChange($event)" [first]="first" [rows]="rows" [totalRecords]="120"></p-paginator>
+<p-paginator (onPageChange)="onPageChange($event)" 
+[first]="first" [rows]="rows" [totalRecords]="total" [showFirstLastIcon]="false"></p-paginator>
