--- a/src/app/modules/pages/landing/components/topics/topics.component.html
+++ b/src/app/modules/pages/landing/components/topics/topics.component.html
@@ -1,3 +1,9 @@
 <div class="ia-chips">
-    <ia-base-chip  *ngFor="let topic of topics" [text]="topic"></ia-base-chip>
+    <ia-base-chip class="ia-base-chip" 
+    *ngFor="let topic of topicOrder; let i = index" 
+    [text]="topic" 
+    [ngStyle]="{'animation-delay': i * 0.5 + 's'}"
+    pTooltip="{{topics[topic]}}"
+    tooltipPosition="bottom"></ia-base-chip>
 </div>
+
