--- a/src/app/modules/pages/landing/landing-page/landing-page.component.css
+++ b/src/app/modules/pages/landing/landing-page/landing-page.component.css
@@ -17,3 +17,19 @@
     text-align: center;
     padding: 10px;
 }
+
+.ia-landing-page {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center; 
+    height: 100vh; 
+}
+
+.ia-about {
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
+}
