--- a/src/app/modules/pages/landing/components/about-toolbar/about-toolbar.component.html
+++ b/src/app/modules/pages/landing/components/about-toolbar/about-toolbar.component.html
@@ -3,5 +3,6 @@
         <span class="mr-2" (click)="redirectTo('Aboutme')">Acerca de mí</span>
         <span class="mr-2" (click)="redirectTo('Github')">Github</span>
         <span class="mr-2" (click)="redirectTo('LinkedIn')">Linkedin</span>
+        <ia-switch-theme-btn></ia-switch-theme-btn>
     </div>
 </p-toolbar>
