ready for stage

--- a/src/app/modules/pages/landing/components/title-landing/title-landing.component.html
+++ b/src/app/modules/pages/landing/components/title-landing/title-landing.component.html
@@ -2,4 +2,4 @@
 <div class="container mt-5">
     <ng-content class="mt-5"></ng-content>
 </div>
-<h3 class="text-center mt-5">By Rafael Filardi</h3>
+<h3 class="text-center mt-5">Rafael Filardi</h3>
