--- a/src/app/modules/pages/main/main-page/main-page.component.html
+++ b/src/app/modules/pages/main/main-page/main-page.component.html
@@ -1,6 +1,6 @@
-<div  [@fadeInOut]  class="w-100 animated-item ia-navbar-container" [class.active]="showNavBar">
+<!-- <div  [@fadeInOut]  class="w-100 animated-item ia-navbar-container" [class.active]="showNavBar">
     <ia-navbar (newInputSearchBar)="searchBarTextRecieve($event)"></ia-navbar>
-</div>
+</div>  -->
 
 <div  class="container" #scrollToTop>
     <div [@fadeInOut] class="w-100 animated-item mt-3">
