--- a/src/app/modules/pages/landing/landing-page/landing-page.component.css
+++ b/src/app/modules/pages/landing/landing-page/landing-page.component.css
@@ -24,6 +24,8 @@
     align-items: center;
     justify-content: center; 
     height: 100vh; 
+
+    overflow-y: hidden !important;
 }
 
 .ia-about {
