ready for commit to main

--- a/src/app/modules/pages/landing/components/about-toolbar/about-toolbar.component.css
+++ b/src/app/modules/pages/landing/components/about-toolbar/about-toolbar.component.css
@@ -10,3 +10,12 @@
     font-weight: bold; 
     cursor: pointer;
 }
+
+
+::ng-deep p-toolbar .p-component, .p-component {
+    margin-right: 0rem;
+}
+
+.p-toolbar {
+    margin: 0 !important;
+}
