--- a/src/app/modules/shared/components/navbar/navbar.component.html
+++ b/src/app/modules/shared/components/navbar/navbar.component.html
@@ -3,14 +3,6 @@
         <label>{{sectionTitle}}</label>
     </div>
     <div class="p-toolbar-group-end">
-        <div class="custom-bar">
-            <p-button *ngIf="showSearchButton"
-            icon="pi pi-search" class="mr-2" (click)="toggleSearchBar()"></p-button>
-            <p-button *ngIf="!showSearchButton"
-            icon="pi pi-home" class="mr-2" (click)="redirectHome()"></p-button>
-            <div class="search-bar-container" [class.active]="showSearchBar">
-                <ia-search-bar (changeOnInputSearch)="onSearchBarInput($event)"></ia-search-bar>
-            </div>
-        </div>
+        <p-button icon="pi pi-home"  (click)="redirectHome()" pTooltip="Volver al inicio"></p-button>
     </div>
 </p-toolbar>
