--- a/src/app/modules/pages/main/components/article-prew-card/article-prew-card.component.css
+++ b/src/app/modules/pages/main/components/article-prew-card/article-prew-card.component.css
@@ -15,3 +15,10 @@
 ::ng-deep .p-component, .p-component {
     margin-right: 0.2rem;
 }
+
+::ng-deep .p-button {
+    background: orange;
+    color: #ffffff;
+    border-color: orange;
+
+}
