--- a/src/app/modules/shared/components/navbar/navbar.component.css
+++ b/src/app/modules/shared/components/navbar/navbar.component.css
@@ -17,3 +17,10 @@
 ::ng-deep p-toolbar .p-component, .p-component {
     margin-right: 0rem;
 }
+
+::ng-deep .p-button {
+    background: orange;
+    color: #ffffff;
+    border-color: orange;
+
+}
