--- a/src/app/modules/pages/landing/landing-page/landing-page.component.html
+++ b/src/app/modules/pages/landing/landing-page/landing-page.component.html
@@ -8,7 +8,7 @@
 
     <footer class="ia-footer-see-more mt-5" #footer>
         <div (click)="scrollToMain()" class = "ia-see-more">
-            <p>Scroll to more...</p>
+            <p>Scroll para mas..</p>
             <i class="pi pi-angle-double-down" style="color: orange"></i>
         </div>
     </footer>
