--- a/src/app/modules/pages/main/components/article-prew-card/article-prew-card.component.css
+++ b/src/app/modules/pages/main/components/article-prew-card/article-prew-card.component.css
@@ -22,3 +22,9 @@
     border-color: orange;
 
 }
+
+::ng-deep .p-button:enabled:hover {
+    background: orange;
+    color: #ffffff;
+    border-color: orange;
+}
