--- a/src/app/modules/shared/components/navbar/navbar.component.html
+++ b/src/app/modules/shared/components/navbar/navbar.component.html
@@ -3,14 +3,15 @@
         <label>{{sectionTitle}}</label>
     </div>
     <div class="p-toolbar-group-end">
-        <div class="custom-bar">
-            <p-button *ngIf="showSearchButton"
-            icon="pi pi-search" class="mr-2" (click)="toggleSearchBar()"></p-button>
-            <p-button *ngIf="!showSearchButton"
-            icon="pi pi-home" class="mr-2" (click)="redirectHome()"></p-button>
-            <div class="search-bar-container" [class.active]="showSearchBar">
+            <!-- <p-button *ngIf="showSearchButton"
+            icon="pi pi-search" class="mr-2" (click)="toggleSearchBar()"></p-button> -->
+            <!-- <p-button *ngIf="!showSearchButton"
+            icon="pi pi-home" class="mr-2" (click)="redirectHome()"></p-button> -->
+            <!-- <div class="search-bar-container" [class.active]="showSearchBar">
                 <ia-search-bar (changeOnInputSearch)="onSearchBarInput($event)"></ia-search-bar>
+            </div> -->
+            <div class="return-land">
+                <i class="pi pi-home" style="color: orange" (click)="redirectHome()" pTooltip="Regresar al inicio"></i>
             </div>
-        </div>
     </div>
 </p-toolbar>
