--- a/src/app/modules/pages/landing/components/about-toolbar/about-toolbar.component.html
+++ b/src/app/modules/pages/landing/components/about-toolbar/about-toolbar.component.html
@@ -1,7 +1,10 @@
 <p-toolbar>
     <div class="p-toolbar-group-end">
-        <span class="mr-2" (click)="redirectTo('Aboutme')">Acerca</span>
-        <span class="mr-2" (click)="redirectTo('Github')">Github</span>
-        <span class="mr-2" (click)="redirectTo('LinkedIn')">Linkedin</span>
+        <span class="mr-2" (click)="redirectTo('Aboutme')">Acerca
+            <i class="pi pi-exclamation-circle"></i></span>
+        <span class="mr-2" (click)="redirectTo('Github')">Github 
+            <i class="pi pi-github"></i></span>
+        <span class="mr-2" (click)="redirectTo('LinkedIn')">Linkedin
+            <i class="pi pi-linkedin"></i></span>
     </div>
 </p-toolbar>
