--- a/src/app/modules/pages/main/main-page/main-page.component.css
+++ b/src/app/modules/pages/main/main-page/main-page.component.css
@@ -16,3 +16,13 @@
 .col-md-4 {
     width: 0 !important;
 }
+
+@media (max-width: 768px) {
+    .order-md-1 {
+        order: 2;
+    }
+    
+    .order-md-2 {
+        order: 1;
+    }
+}
