--- a/src/app/modules/pages/study-cases/study-case-page/study-case-page.component.html
+++ b/src/app/modules/pages/study-cases/study-case-page/study-case-page.component.html
@@ -1,2 +1,4 @@
-<p>Working on it</p>
-<p> Redirigiendo en {{ remainingTime }} segundos...</p>
+<!-- <p>Working on it</p>
+<p> Redirigiendo en {{ remainingTime }} segundos...</p> -->
+
+<ia-ce-enfermedad-cardiaca *ngIf="cardio"></ia-ce-enfermedad-cardiaca>
