--- a/src/app/modules/pages/main/components/articles-filter/articles-filter.component.html
+++ b/src/app/modules/pages/main/components/articles-filter/articles-filter.component.html
@@ -2,14 +2,14 @@
     <p-accordion [activeIndex]="0">
         <p-accordionTab header="Filtrar por Temas: ">
             <ia-tags *ngFor="let ut of UTS" [text]="ut" (click)="AddFilterUT(IaTag)" [severity]="'info'"
-            #IaTag value="ut"></ia-tags>
+            #IaTag value="ut" class="ia-tag"></ia-tags>
         </p-accordionTab>
         <p-accordionTab header="Filtrar por Tipo: ">
             <ia-tags *ngFor="let tag of TAG | keyvalue" [text]="tag.value" (click)="AddFilterUT(IaTag)" [severity]="'info'"
-            #IaTag value="ut"></ia-tags>
+            #IaTag value="ut" class="ia-tag"></ia-tags>
         </p-accordionTab>
         <p-accordionTab header="Ordenar por:">
-            <p-checkbox value="des" inputId="dest"></p-checkbox>
+            <p-checkbox value="des" inputId="dest" (onChange)="showDestacados()"></p-checkbox>
             <label for="ny">Mostrar solo Destacados</label>
         </p-accordionTab>
     </p-accordion>
